SP8-5 [UPDATE] add gulp watch task
- optimize tasks for local development and deployment

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,9 +10,9 @@ pipelines:
         script:
           - npm install -g gulp
           - npm install
-          - gulp sass
+          - gulp
         artifacts:
-          - style.css
+          - app.css
     - step:
         name: Deploy Theme
         deployment: production
@@ -32,9 +32,9 @@ pipelines:
         script:
           - npm install -g gulp
           - npm install
-          - gulp sass
+          - gulp
         artifacts:
-          - style.css
+          - app.css
     - step:
         name: Deploy Theme
         deployment: staging
