--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ config.codekit3
 
 # css file gets compiled with deployment process
 *.css
+!style.css
 
 # localy generated files by running node
 package-lock.json
