--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-sass": "^4.0.2",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "browser-sync": "^2.26.3",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
