SP8-5 [FIX] fix artifact path in pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,7 @@ pipelines:
           - npm install
           - gulp
         artifacts:
-          - app.css
+          - assets/css/app.css
     - step:
         name: Deploy Theme
         deployment: production
@@ -34,7 +34,7 @@ pipelines:
           - npm install
           - gulp
         artifacts:
-          - app.css
+          - assets/css/app.css
     - step:
         name: Deploy Theme
         deployment: staging
